--- a/OHack.css
+++ b/OHack.css
@@ -24,8 +24,16 @@ a:hover{
   color: black;
   text-decoration: none;
 }
-.header {
+header {
+  margin: auto;
+}
+.topPart {
+  display: inline;
+}
+.header img {
   padding: 5px;
+  width: 144px;
+  height: 64.5px;
 }
  .nav {
    text-decoration: none;
@@ -46,13 +54,27 @@ a:hover{
   padding: 5px;
 }
 #contactButton{
-  background-color:  #1568B4;
+  background-color:  ##FFFFFF
   color: white;
   padding: 5px;
 }
 
-#notificationBox {
-  border: 1em solid black;
-  padding: 1em;
-  
+.notificationBox {
+  border: 2px solid #C2D6D6;
+  padding:2px;
+  height: 100px;
+  margin: 2px;
+  text-align: left;
+}
+
+@media (max-width: 700px), handheld and (orientation: landscape){
+  .header img{
+    width: 150px;
+    height: 75px;
+  }
+  .notificationBox{
+    width: 150px;
+    height: 75px;
+    font-size: 10px;
+  }
 }
