--- a/OHack.css
+++ b/OHack.css
@@ -54,7 +54,7 @@ header {
   padding: 5px;
 }
 #contactButton{
-  background-color:  ##FFFFFF
+  background-color:  #196AB4;
   color: white;
   padding: 5px;
 }
