--- a/OHack.css
+++ b/OHack.css
@@ -3,7 +3,20 @@
 body {
   font-family: helvetica, sans-serif;
   font-size: 12px;
-  background-color: white;
+  /*background-color: white;*/
+
+  background-color: #315481;
+  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  background-attachment: fixed;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  padding: 0;
+  margin: 0;
 }
 ul {
   list-style-type: none;
@@ -77,4 +90,11 @@ header {
     height: 75px;
     font-size: 10px;
   }
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  min-height: 100%;
+  background: white;
 }
