--- a/OHack.css
+++ b/OHack.css
@@ -49,6 +49,8 @@ header {
   padding: 5px;
   width: 144px;
   height: 64.5px;
+  position: absolute;
+  top:18px;
 }
  .nav {
    text-decoration: none;
@@ -78,7 +80,6 @@ header {
   background-color: #BED73E;
   padding: 5px;
 }
-
 .notificationBox {
   border: 2px solid #C2D6D6;
   padding:2px;
