--- a/OHack.css
+++ b/OHack.css
@@ -6,7 +6,8 @@ body {
   /*background-color: white;*/
 
   background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  /*background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+*/background-image: url("https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xfa1/t31.0-8/11115609_10153321651556209_1710896137069926848_o.jpg");
   background-attachment: fixed;
 
   position: absolute;
@@ -39,16 +40,17 @@ a:hover{
   color: black;
   text-decoration: none;
 }
-header {
-  margin: auto;
+.header {
+  width: 225px;
+  height: 120px;
 }
 .topPart {
   display: inline;
 }
 .header img {
   padding: 5px;
-  width: 144px;
-  height: 64.5px;
+  width: 225px;
+  height: 120px;
 }
  .nav {
    text-decoration: none;
@@ -83,8 +85,11 @@ header {
   border: 2px solid #C2D6D6;
   padding:2px;
   height: 100px;
-  margin: 2px;
-  text-align: left;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  right: -5px;
+  max-width: 500px;
 }
 
 @media (max-width: 700px), handheld and (orientation: landscape){
