Changed href links

--- a/components/main.html
+++ b/components/main.html
@@ -12,16 +12,16 @@
   <nav class = "navbar navbar-default">
     <ul class = "nav navbar-nav">
       <li id = "homeButton">
-        <a href="*">Home</a>
+        <a href="/">Home</a>
       </li>
       <li id = "newsButton">
-        <a href = "*">News</a>
+        <a href = "/news">News</a>
       </li>
       <li id = "calendarButton">
-        <a href = "*">Calendar</a>
+        <a href = "/calendar">Calendar</a>
       </li>
       <li id = "contactButton">
-        <a href = "*">Contact Information</a>
+        <a href = "/contact">Contact Information</a>
       </li>
       <li id = "spanishButton">
         <a href= "*">Español</a>
