Added a html file to components folder and added a class edit to the css for the calendar html file

--- a/OHack.css
+++ b/OHack.css
@@ -25,7 +25,10 @@ nav > li {
   /*width: 70px;*/
   color: #FFF !important;
 }
-
+.responsive-iframe-container{
+  overflow: auto;
+  max-width: 570px;
+}
 .header li {
   float: left;
 }
