added contact information template

--- a/components/news.html
+++ b/components/news.html
@@ -1,12 +1,14 @@
 <template name = "news">
-  <h2> Recent News </h2>
+  <h2> Recent News and Announcements</h2>
   {{#each articles}}
     {{> article}}
   {{/each}}
 </template>
 <template name = "article">
-  <h3 style = "font-size: 14px; font-weight: bold;">{{title}}</h3>
-  <p style = "font-size: 12px;">{{text}}</p>
-  <p style = "font-size: 10px; color: lightgray;">{{createdAt}}</p>
-  <p></p>
+  <div style = "border: 2px solid black">
+    <h3 style = "font-size: 14px; font-weight: bold;">{{title}}</h3>
+    <p style = "font-size: 12px;">{{text}}</p>
+    <p style = "font-size: 10px; color: lightgray;">{{createdAt}}</p>
+    <p></p>
+  </div>
 </template>
