fixed problems in contact code

--- a/components/contact.html
+++ b/components/contact.html
@@ -1,4 +1,4 @@
-<template = "contact">
+<template name = "contact">
   <div>
     <h2> Contact Us </h2>
   </div>
@@ -29,3 +29,4 @@
       <p>Fri. 10:30 AM - 5:00 PM </p>
     </div>
   </div>
+</template>
