--- a/components/home.html
+++ b/components/home.html
@@ -52,7 +52,7 @@
 
 <template name="alert">
   <!-- <li> -->
-    <p style = "font-size: 10px; word-wrap: normal; color: black;">{{text}}</p>
+    <h3 style = "font-size: 10px; word-wrap: normal; color: black;">{{text}}</h3>
     <p style = "font-size: 9px; word-wrap: normal; color: lightgray;">{{createdAt}}</p>
   <!-- </li> -->
 </template>
