Linked logo to Home page in main.html

--- a/components/main.html
+++ b/components/main.html
@@ -7,7 +7,9 @@
 
     <div class = "container-fluid container">
       <div class = "header">
+        <a href="/">
         <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
+      </a>
       </div>
 
       <nav class = "navbar navbar-default">
