--- a/components/contact.html
+++ b/components/contact.html
@@ -5,7 +5,7 @@
 
   <div class = "row">
     <div class = "col-xs-4 col-sm-4 col-md-4" style = "max-width: 300px;">
-      <a href = "https://www.google.com/maps/place/650+E+Morelos+St,+Chandler,+AZ+85225/@33.2944059,-111.8349231,766m/data=!3m2!1e3!4b1!4m2!3m1!1s0x872baa40286a5db3:0x530f907b2e1c0c25?hl=en" style = "text-decoration: none;">
+      <a href = "https://www.google.com/maps/place/650+E+Morelos+St,+Chandler,+AZ+85225/@33.2944059,-111.8349231,766m/data=!3m2!1e3!4b1!4m2!3m1!1s0x872baa40286a5db3:0x530f907b2e1c0c25?hl=en" style = "color: black">
         <p>650 E. Morelos St.</p>
       <p>Chandler, AZ 85225</p></a>
       <p>480.821.4207</p>
