--- a/OHack.css
+++ b/OHack.css
@@ -136,10 +136,10 @@ a:hover{
   background: white;
 }
 
-form{
+/*form{
   max-width: 600px;
   margin: 0 auto;
   display: flex;
   /*min-height: 100%;*/
   /*background: white;*/
-}
+}*/
