--- a/components/main.html
+++ b/components/main.html
@@ -29,9 +29,7 @@
           <li id = "spanishButton">
             <a href= "*">Español</a>
           </li>
-          <li id = "login-buttonButton">
-            {{> loginButtons}}
-          </li>
+
         </ul>
       </nav>
 
@@ -71,6 +69,10 @@
       </li>
       <li>
         <p>info@icanaz.org</p>
+      </li>
+      <li width = "15px" height = "50px"></li>
+      <li id = "login-buttonButton">
+        {{> loginButtons}}
       </li>
     </ul>
     </nav>
