--- a/components/contact.html
+++ b/components/contact.html
@@ -11,6 +11,18 @@
       <p>480.821.4207</p>
       <p>info@icanaz.org</p>
     </div>
+    <div>
+      <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+        fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+        <div class="fb-page" data-href="https://www.facebook.com/ICANAZ?fref=ts" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ICANAZ?fref=ts"><a href="https://www.facebook.com/ICANAZ?fref=ts">ICAN</a></blockquote></div></div>
+      </div>  
     <div class = "col-xs-4 col-sm-4 col-md-4" style = "max-width: 300px;">
       <p><b>Office Hours</b></p>
       <p>Mon.-Fri. 10:00 AM - 6:00 PM </p>
