changed a great many things

--- a/components/home.html
+++ b/components/home.html
@@ -29,7 +29,7 @@
   <h4>On this website, you'll be able to access... </h4>
   <ul>
     <li>
-      Any urgent and<a href="*" style = "color: black;"> non-urgent news about the program </a>
+      Any urgent and<a href="/news" style = "color: black;"> non-urgent news about the program </a>
     </li>
     <li>
       <a href = "/calendar" style = "color: black;"> Our Events Calendar </a>
