--- a/components/main.html
+++ b/components/main.html
@@ -42,7 +42,7 @@
     <ul class = "nav navbar-nav footer">
       <li>
         <a href = "https://www.facebook.com/ICANAZ?fref=ts">
-          <img src="facebookthumbnail.png/images" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
+          <img src="images/facebookthumbnail.png" alt="facebookThumbnail" style = "width: 50px; height: 50px;"/>
         </a>
       </li>
       <li>
