loaded all thumbnail logos for socialmedia and changed src

--- a/components/main.html
+++ b/components/main.html
@@ -8,7 +8,7 @@
     <div class = "container-fluid container">
       <div class = "header">
         <a href="/">
-        <img src="http://www.taohealingcenters.org/images/ican.jpg" alt="ICAN Logo"/>
+        <img src="images/icanlogo.jpg" alt="ICAN Logo"/>
       </a>
       </div>
 
@@ -47,17 +47,17 @@
       </li>
       <li>
         <a href = "https://twitter.com/icanchandler">
-          <img src="http://www.ride24hr.com/uploads/twitter-icon2.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
+          <img src="images/twitterthumbnail.png" alt="twitterThumbnail" style = "width: 50px; height: 50px;"/>
         </a>
       </li>
       <li>
         <a href = "https://plus.google.com/u/0/112268392666409549126/about">
-          <img src = "http://endstone.net/wp-content/uploads/2014/06/google-plus-icon-png-32-x-32.png" alt = "googlePlusIcon" style = "width: 50px; height: 50px;"/>
+          <img src = "images/googleplushthumbnail.png" alt = "googlePlusIcon" style = "width: 50px; height: 50px;"/>
         </a>
       </li>
       <li>
         <a href = "https://www.linkedin.com/company/ican---positive-programs-for-youth?trk=nmp_rec_act_company_photo">
-          <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" alt = "linkedInIcon" style = "width: 50px; height: 50px;"/>
+          <img src = "images/linkedinthumbnail.png" alt = "linkedInIcon" style = "width: 50px; height: 50px;"/>
         </a>
       </li>
       <li>
