--- a/components/main.html
+++ b/components/main.html
@@ -27,7 +27,7 @@
             <a href = "/contact">Contact Information</a>
           </li>
           <li id = "spanishButton">
-            <a href= "*">Español</a>
+            <a href= "spanish">Español</a>
           </li>
 
         </ul>
