remove urgent checkbox

--- a/components/spanish.html
+++ b/components/spanish.html
@@ -4,9 +4,9 @@
       <input type="text" name="text" placeholder="Escribe para crear una noticia nueva." style = "width: 100%;"/>
     </div>
         <div class="col-lg-12">
-          <div class="col-md-6 pull-left">
+          <!-- <div class="col-md-6 pull-left">
             <input type="checkbox" name="urgent" value="urgente?"/> urgent
-          </div>
+          </div> -->
           <div class="col-md-6 pull-right">
             <input type="submit"/>
           </div>
