--- a/components/home.html
+++ b/components/home.html
@@ -5,9 +5,9 @@
       <input type="text" name="text" placeholder="Type to send new notification" style="width: 100%;" />
     </div>
     <div class="col-lg-12">
-      <div class="col-md-6 pull-left">
+      <!-- <div class="col-md-6 pull-left">
         <input type="checkbox" name="urgent" value="urgent?"/> urgent
-      </div>
+      </div> -->
       <div class="col-md-6 pull-right">
         <input type="submit"/>
       </div>
