--- a/components/contact.html
+++ b/components/contact.html
@@ -30,16 +30,23 @@
       <p>Fri. 10:30 AM - 5:00 PM </p>
     </div>
   </div>
-  <div>
+  <div class="facebooktimeline">
     <div id="fb-root"></div>
-      <script>(function(d, s, id) {
+    <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
       fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
+    }(document, 'script', 'facebook-jssdk'));</script>
 
-      <div class="fb-page" data-href="https://www.facebook.com/ICANAZ?fref=ts" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ICANAZ?fref=ts"><a href="https://www.facebook.com/ICANAZ?fref=ts">ICAN</a></blockquote></div></div>
+
+
+
+<div class="fb-page" data-href="https://www.facebook.com/ICANAZ" data-width="600px" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ICANAZ"><a href="https://www.facebook.com/ICANAZ">ICAN</a></blockquote></div></div>
+
+
+
+
     </div>
 </template>
