changed a grammatical error

--- a/components/spanish.html
+++ b/components/spanish.html
@@ -44,7 +44,7 @@
       para ser miembros productivos y responsables de la comunidad.
     </p>
     <p>
-      8 de 10 personas jovenes en los áreas que servimos están viviendo
+      8 de 10 personas jovenes en los áreas que servimos están viviendo en
       pobreza extrema. Cuatro de estos muchachos se dormirán hambre y
       ocho de estos usarán drogas o alcohol para aguantar con sus
       realidades duras que confrontan. Uniéndose pandillas se transforma
